2006-01-20  Don Allingham  <don@gramps-project.org>
	* src/PageView.py: remove debug statements
	* src/ViewManager.py: check for existing action group before removing
	* src/GrampsDb/_GrampsBSDDB.py: remove function call in find_surname
	* src/GenericFilter.py: implement short-circuit if only rule is
	Everyone
	* src/NameDisplay.py: optimization
	* src/PeopleModel.py: optimization of data building

2006-01-20  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (transaction_begin,
	transaction_commit): disable secondary index removal/rebuilding
	due to bugs in bsddb; (_update_reference_map): explicitly check
	for addition versus update.
	* src/GrampsDb/_GrampsDbBase.py: Move _update_reference_map into
	_commite_base.
	* src/GrampsDb/_GrampsBSDDB.py: Move _update_reference_map into
	_commite_base.

2006-01-20  Don Allingham  <don@gramps-project.org>
	* src/PageView.py: add ellipsize, better dirty/clean management,
	set fixed column width and fixed height
	* src/GrampsDb/_GrampsDbBase.py: handle default column sizes

2006-01-20 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/ObjectSelector/Makefile.am: added automake stuff.
	
2006-01-20 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/ObjectSelector/_Constants.py, src/ObjectSelector/_Factories.py,
	  src/ObjectSelector/_FamilyFilterFrame.py,src/ObjectSelector/_FamilyFrame.py,
	  src/ObjectSelector/_FamilyPreviewFrame.py,src/ObjectSelector/_FamilyTreeFrame.py,
	  src/ObjectSelector/_FilterFrameBase.py,src/ObjectSelector/_FilterSpec.py,
	  src/ObjectSelector/_FilterSpecBase.py,src/ObjectSelector/_ObjectFrameBase.py,
	  src/ObjectSelector/_ObjectSelectorResut.py,src/ObjectSelector/_ObjectSelectorWindow.py,
	  src/ObjectSelector/_PersonFilterFrame.py,src/ObjectSelector/_PersonFilterSpec.py,
	  src/ObjectSelector/_PersonFrame.py,src/ObjectSelector/_PersonPreviewFrame.py,
	  src/ObjectSelector/_PersonTreeFrame.py,src/ObjectSelector/__init__.py: added standard header
